export const snapshot = {};

snapshot[`number 1`] = `
{
  type: "number",
}
`;

snapshot[`number 2`] = `
{
  description: "One.",
  type: "number",
}
`;

snapshot[`number 3`] = `
{
  description: "One. Two.",
  type: "number",
}
`;
